# cm_executors

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: main.yml
include/cm_executors/: events_cbg_executor.hpp  global_event_id_provider.hpp  ready_entity.hpp  registered_entity_cache.hpp  scheduler.hpp  timer_manager.hpp
src/: FirstInFirstOutScheduler.cpp  FirstInFirstOutScheduler.hpp  PriorityScheduler.cpp  PriorityScheduler.hpp  callback_group_scheduler.hpp  events_cbg_executor.cpp  global_event_id_provider.cpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  benchmark_executor.cpp
test/executors/: executor_types.hpp  test_executors.cpp  test_static_single_threaded_executor.cpp
