<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cm_executors</name>
  <version>0.9.1</version>
  <description>Cellumation executor package .</description>

  <maintainer email="j.machowinski@Cellumation.com">Janosch Machowinski</maintainer>

  <license>Apache License 2.0</license>

  <author email="j.machowinski@Cellumation.com">Janosch Machowinski</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_gen_version_h</buildtool_depend>


  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_google_benchmark</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>mimick_vendor</test_depend>
  <test_depend>performance_test_fixture</test_depend>
  <test_depend>rmw</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>
  <test_depend>rosidl_default_generators</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
